# github-copilot-ai-template

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  AUGMENT.md  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md  super-linter.env
.github/actions/run-tests/: action.yml
.github/actions/validate-context/: action.yml
.github/instructions/: cicd.instructions.md  development.instructions.md  python.instructions.md
.github/prompts/: problem-solving.prompt.md  rca.prompt.md
.github/workflows/: super-linter.yml  validate-copilot-limits.yml
docs/: python-style-guide.md
scripts/: copilot-context-health.conf  local-super-linter.ps1  local-super-linter.sh  run_super_linter_hook.py  validate_context_limits.py
scripts/context_validator/: config.py  main.py  utils.py
tests/: test_config_loading.py  test_file_finding.py  test_file_validation.py  test_main_integration.py
