# GitHub Copilot AI Template - Python Configuration
# Python 3.12+ LTS required

[project]
name = "github-copilot-ai-template"
version = "0.1.0"
description = "Template repository for GitHub Copilot AI projects"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.8.0,<1.0.0",
    "types-pytest>=8.0.0.0,<9.0.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.pylint.main]
# Disable pylint - ruff is the standard linter for this repository
ignore-patterns = [".*"]
